WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199534
Mail's use of punchOutWhiteBackgroundsInDarkMode not working on iOS
https://bugs.webkit.org/show_bug.cgi?id=199534
Summary
Mail's use of punchOutWhiteBackgroundsInDarkMode not working on iOS
Timothy Hatcher
Reported
2019-07-05 15:03:43 PDT
Some Mail with white backgrounds are showing black instead of the system background color. <
rdar://problem/52586836
>
Attachments
Patch
(7.27 KB, patch)
2019-07-05 15:11 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-07-05 15:11:21 PDT
Created
attachment 373544
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-07-05 15:49:39 PDT
Comment on
attachment 373544
[details]
Patch Would be nice to test this.
WebKit Commit Bot
Comment 3
2019-07-05 16:19:40 PDT
Comment on
attachment 373544
[details]
Patch Clearing flags on attachment: 373544 Committed
r247184
: <
https://trac.webkit.org/changeset/247184
>
WebKit Commit Bot
Comment 4
2019-07-05 16:19:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug