Mail's use of punchOutWhiteBackgroundsInDarkMode not working on iOS. https://bugs.webkit.org/show_bug.cgi?id=199534 rdar://problem/52586836

Reviewed by Simon Fraser.

Tests: css3/color-filters/punch-out-white-backgrounds.html

* dom/Document.cpp:
(WebCore::Document::compositeOperatorForBackgroundColor const): Added.
Use CompositeDestinationOut for transparent frames, otherwise CompositeDestinationIn.
* dom/Document.h:
* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::paintBoxDecorations): Use compositeOperatorForBackgroundColor.
* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintRootBoxFillLayers): Ditto.
(WebCore::RenderBox::paintBackground): Ditto.
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::paintBackgroundsBehindCell): Ditto.


Canonical link: https://commits.webkit.org/213443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247184 268f45cc-cd09-0410-ab3c-d52691b4dbfc